--- a/student-records-app/src/finances.css
+++ b/student-records-app/src/finances.css
@@ -23,8 +23,8 @@
     border-radius: 25px;
 }
 #finances .box-container > a {
-    font-weight: 500;
-    color: #495867;
+    font-weight: bold;
+    color: #004385;
     text-decoration: none;
     transition: all 0.3s ease-in-out;
     position: relative;
