--- a/student-records-app/src/finances.css
+++ b/student-records-app/src/finances.css
@@ -18,7 +18,7 @@
 #finances .box-container > * {
     background-color: white;
     padding: 1rem 1.5rem;
-    box-shadow: 20px 20px 10px rgba(0, 0, 0, 0.05); /* Soft Shadow */
+    box-shadow: 20px 20px 10px rgba(0, 0, 0, 0.05); /* soft shadow */
     border: 3px solid #004385;
     border-radius: 25px;
 }
