--- a/student-records-app/src/frontend/studentSearch.css
+++ b/student-records-app/src/frontend/studentSearch.css
@@ -1,19 +1,22 @@
 /* studentSearch.css */
-/* ensure the entire body has a full height */
+
 #studentSearch {
-    height: 100%;
-    margin-top: 7rem;
     font-family: Arial, sans-serif;
+    color: #495867;
     display: flex;
   }
   
   /* sidebar styles */
   #studentSearch .sidebar {
     width: 300px; /* fixed width for the sidebar */
-    background-color: #f4f4f4;
+    background-color: white;
     padding: 20px;
-    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-    position: relative;
+    box-shadow: 20px 20px 10px rgba(0, 0, 0, 0.05); /* soft shadow */
+    border: 1px solid #e0e0e0;
+    border-radius: 25px;
+    position: absolute;
+    top: 7rem;
+    left: 20px;
   }
   
   #studentSearch .sidebar .checkboxes {
@@ -29,20 +32,72 @@
     margin-bottom: 10px;
   }
   
-  #studentSearch .sidebar .toggle-btn {
-    position: relative;
+  #studentSearch .sidebar #toggle-btn {
     top: 0;
     left: 0;
-    padding: 5px;
-    cursor: pointer;
+    transform: translate(50px, 1.5rem);
+  }
+
+  #studentSearch .sidebar #reset-btn {
+    top: 0;
+    left: 0;
     transform: translate(200px, 1.5rem);
+  }
+
+  #studentSearch .btn {
+    background: #004385;
+    color: white;
+    padding: 8px;
+    border: none;
+    border-radius: 8px;
+    font-size: 11px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: all 0.3s ease-in-out;
+    box-shadow: 0px 5px 0px #004385;
+    position: relative;
+  }
+
+  #studentSearch .btn:hover {
+    background: #3674b3;
+    box-shadow: 0px 2px 0px #004385;
+  }
+
+  #studentSearch .sidebar #clear-btn {
+    top: 0;
+    left: 0;
+    transform: translate(100px, -2.75rem);
   }
   
   /* student list styling */
   #studentSearch article {
+    position: absolute;
+    left: 400px;
+    top: 7rem;
     padding: 20px;
   }
+
+  #studentSearch article > * {
+    background-color: white;
+    padding: 20px;
+    box-shadow: 20px 20px 10px rgba(0, 0, 0, 0.05); /* soft shadow */
+    border: 1px solid #e0e0e0;
+    border-radius: 25px;
+    margin: 25px;
+  }
+
+  #studentSearch input[type="text"] {
+    width: 100%;
+    padding: 0.25rem;
+    margin: 1rem 0;
+    border-radius: 10px;
+    border: 1px solid #004385;
+  }
   
+  #studentSearch .sidebar input[type="text"] {
+    width: 3rem;
+  }
+
   #studentSearch article h2 {
     font-size: 1.5rem;
     margin-bottom: 20px;
@@ -63,7 +118,8 @@
   }
   
   th {
-    background-color: #f4f4f4;
+    background-color: #004385;
+    color: white;
   }
   
   tr:nth-child(even) {
