--- a/student-records-app/src/frontend/courses.css
+++ b/student-records-app/src/frontend/courses.css
@@ -98,6 +98,9 @@ h2 {
   align-items: center;
   justify-content: center;
 }
+.auth-button label{
+  color: white;
+}
 
 .auth-button:hover {
   background: #3674b3;
