--- a/student-records-app/src/frontend/addFee.css
+++ b/student-records-app/src/frontend/addFee.css
@@ -92,7 +92,7 @@
   }
 
   #studentSearch input[type="text"] {
-    width: calc(100% - 100px);
+    width: 100%;
     padding: 0.25rem;
     margin: 1rem 0;
     border-radius: 10px;
